--- a/.github/workflows/daily-screenshot.yml
+++ b/.github/workflows/daily-screenshot.yml
@@ -20,6 +20,14 @@ jobs:
         node-version: '18'
         cache: 'npm'
         
+    - name: Cache Puppeteer
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/puppeteer
+        key: ${{ runner.os }}-puppeteer-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-puppeteer-
+        
     - name: Install dependencies
       run: |
         npm install puppeteer
