--- a/.github/workflows/daily-screenshot.yml
+++ b/.github/workflows/daily-screenshot.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   screenshot:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     
     steps:
     - name: Checkout code
@@ -42,4 +44,4 @@ jobs:
         git config --local user.name "GitHub Action"
         git add screenshots/
         git commit -m "Daily screenshot $(date '+%Y-%m-%d')" || exit 0
-        git push
+        git push origin main
