--- a/.github/workflows/daily-screenshot.yml
+++ b/.github/workflows/daily-screenshot.yml
@@ -2,8 +2,8 @@ name: Daily Dashboard Screenshot
 
 on:
   schedule:
-    # ТЕСТ: Запускается каждый день в 8:30 UTC (9:30 по Парижу)
-    - cron: '30 8 * * *'
+    # Запускается каждый день в 22:30 UTC (23:30 по Парижу зимой, 00:30 летом)
+    - cron: '30 22 * * *'
   workflow_dispatch: # Позволяет запускать вручную
 
 jobs:
