--- a/env.example
+++ b/env.example
@@ -12,5 +12,5 @@ REACT_APP_BASE_URL=https://bogachev11.github.io/french-challenge
 # Local development URL
 REACT_APP_LOCAL_URL=http://localhost:3000
 
-# GitHub API Configuration (for GitHub Actions)
-# API_TOKEN is set as GitHub secret
+# GitHub API Configuration
+REACT_APP_API_TOKEN=your_github_token_here
