Add OneDrive conflicted copy patterns to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ coverage/
 tmp/
 temp/
 
+# OneDrive conflicted copies
+* (LAPTOP-STF80BHL conflicted copy*).*
+* (conflicted copy*).*
+* (conflicted copy*)
+
